css/scrolly.css
html {
  height: 100%;
  width: 100%;
  padding: 0;
  margin: 0;
}

body {
  height: 100%;
  /* width: 100%; */

  font-size: 18px;
  background-color: white;
  color: black;
  transition: 0.5s;
  padding: 0;
  margin: 0;
}

header.header {
  position: fixed;
  top: 0em;
  margin-top: 0.5em;
}

h1 {
  font-size: 24px;
  position: fixed;
  top: 40px;
}

header h1 {
  position: relative;
  font-size: 24px;
  top: 0px;
}

.intro {
  position: fixed;
  top: 90px;
  font-style: italic;
  font-size: 14px;
  max-width: 60%;
}

#vizcontainer {
  position: fixed;
  bottom: 1em;
  left: 30px;
  width: 100%;
  /* background: linear-gradient(
          to bottom,
          rgba(255, 255, 255, 0),
          rgba(255, 255, 255, 1) 25%
        ); */
  display: flex;
  justify-content: flex-start;
  z-index: 10;
  align-items: bottom;
  transition: 0.5s bottom;
  max-width: 900px;
}

#viz {
  transform: scale(0.8);
  height: calc(0.8 * 450px);
  position: relative;
}

#text {
  width: 100%;
  right: 0em;
  top: 0em;
  padding-top: 18%;
}

#image {
  position: fixed;
  top: 7em;
  left: 1em;
  width: calc(60% - 1em);
  height: calc(100% - 7em);
  max-height: calc(100% - 2em - 0.8 * 450px - 7em);
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  z-index: -1;
}

#image img,
#image video {
  margin-left: auto;
  margin-right: auto;
  z-index: 0;

  display: block;
  max-width: 100%;
  max-height: 100%;
  width: auto;
  height: auto;
  object-fit: contain;
}

.block {
  height: 70vh;
}

p {
  width: auto;
  max-width: 400px;
  margin-left: calc(60% + 2em);
  margin-right: 1em;
}

.credit {
  font-style: italic;
  text-align: center;
}

.block.end {
  min-height: 100vh;
  height: auto;
  background-color: black;
}

#videomatrix {
  width: calc(100% + 50px);
  z-index: 10;
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
  margin-left: -50px;
  background-color: black;
}

svg {
  transform: scale(1);
  max-width: 900px;
  max-height: 500px;
  transition: 0.5s;
}

#date {
  border-radius: 8px;
  z-index: 1000;
  width: auto;
  transition: 0.3s background-color;
}

#date {
  background-color: rgba(255, 255, 255, 1);
}

#date:hover {
  background-color: rgba(255, 255, 255, 1) !important;
}

svg {
  background-color: white;
  max-width: 400px;
  max-height: 400px;
  border-radius: 200px;
}

#date:hover .date {
  color: #444 !important;
}

.citation {
  font-size: 14px;
  padding-left: 0.5em;
}

@media (max-width: 767px) {
  #vizcontainer {
    transform: scale(0.67) translate(-180px, 180px);
  }

  #image {
    width: 100%;
    left: 0em;
    max-height: calc(100% - 7em);
    justify-content: flex-start;
  }

  #viz {
    margin-left: -4em;
  }

  #text {
    padding-top: 85%;
  }

  #text div p {
    margin-left: 0px;
    background-color: white;
  }

  .intro {
    max-width: 100%;
    z-index: -1;
  }

  h1 {
    z-index: -1;
  }

  header {
    z-index: -1;
  }

  .label {
    opacity: 1 !important;
  }
}

